vlib/v/checker/tests/unknown_method.vv
module main

struct Test {}

struct Foo[T] {}

fn new_foo[F]() Foo[F] {
	return Foo[F]{}
}

fn main() {
	t := Test{}
	println(t.sdd())

	foo := new_foo[int]()
	foo.bar()
}
